# APS112-DL-Lighting-Camera

./: .gitattributes  APS112_Model_Creation_notebook.ipynb  README.md  raspberry_pi_inference.py
hallway_lighting/: AGENTS.md  README.md  pyproject.toml  requirements.txt
hallway_lighting/configs/: base.yaml  carbon.yaml  datasets.yaml  infer.yaml  train.yaml
hallway_lighting/hallway_lighting/: __init__.py  infer.py  notebook_runtime_helper.py  training.py
hallway_lighting/hallway_lighting/data/: __init__.py  archive_utils.py  custom_hallway.py  dataset_registry.py  fast_indoor_light.py  manifests.py  mid_intrinsics.py  mit_intrinsic.py  nyu_depth_v2.py  point_sampling.py  transforms.py
hallway_lighting/hallway_lighting/losses/: __init__.py  carbon_losses.py  intrinsic_losses.py  lux_losses.py  segmentation_losses.py  uncertainty_losses.py
hallway_lighting/hallway_lighting/models/: __init__.py  backbone.py  hallway_multitask_unet.py  (+1 more)
hallway_lighting/hallway_lighting_runs/: training_history.json
hallway_lighting/notebooks/: APS112_model_creation_notebook.ipynb  hallway_illuminance_drive_end_to_end_prototype.ipynb  hallway_illuminance_nyu_mid_autorun_colab.ipynb  hallway_illuminance_public_datasets_only_colab.ipynb  hallway_illuminance_train_eval_accessible_datasets.ipynb  hallway_illuminance_train_eval_all_in_one.ipynb  hallway_illuminance_train_test.ipynb  local_photo_onnx_fixture_test.ipynb  model_working_notebook.ipynb
hallway_lighting/scripts/: export_onnx.py
hallway_lighting/templates/: custom_hallway_manifest_template.csv  point_targets_template.json
(+15 files in other folders)
